log
Fri, Mar 21, 2025 11:20:36 AM: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Fri, Mar 21, 2025 11:21:13 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
df4186f
Fri, Mar 21, 2025 11:22:15 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
51dce05
Fri, Mar 21, 2025 11:29:27 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
52e9619
Fri, Mar 21, 2025 11:39:51 AM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  3|2
total_score: 40/70
fe90d3b
Fri, Mar 21, 2025 11:41:06 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
9948214
Fri, Mar 21, 2025 11:55:59 AM: 
 exercises.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:14: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
          if (isEmpty(P)) {
              ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7540114
Fri, Mar 21, 2025 12:10:48 PM: 
 exercises.c | 18 ++----------------
 1 file changed, 2 insertions(+), 16 deletions(-)
 tests:  4|1
total_score: 50/70
5f505be
